# ChangeLog for sec-policy/selinux-hal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.3 2007/06/04 00:26:41 pebenito Exp $

  04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
  selinux-hal-20070329.ebuild:
  Mark stable.

*selinux-hal-20070329 (29 Mar 2007)

  29 Mar 2007; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-20070329.ebuild:
  New SVN snapshot.

*selinux-hal-20061114 (22 Nov 2006)

  22 Nov 2006; Chris PeBenito <pebenito@gentoo.org> +metadata.xml,
  +selinux-hal-20061114.ebuild:
  Initial commit.
