@@ -1,0 +1,3 @@
+MD5 a74953fe5c25a2629855b52906fc9c69 refpolicy-20070928.tar.bz2 424987
+RMD160 e0ea91df7673cd5412abfa8a268c241049a44fd6 refpolicy-20070928.tar.bz2 424987
+SHA256 5d607e639d3ec86027e57fefa8f2795930e905843f7a6a971385e4d173474f49 refpolicy-20070928.tar.bz2 424987
