@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.3 2007/06/04 00:26:41 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.4 2007/11/27 02:45:34 pebenito Exp $
+
+*selinux-hal-20070928 (26 Nov 2007)
+
+  26 Nov 2007; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-hal-20070928.ebuild:
+  New SVN snapshot.
 
   04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
   selinux-hal-20070329.ebuild:
